Update to support latest spec tests.